--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "normal";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "4.1.95" !default;
+$mdi-version:          "4.2.95" !default;
 
 $mdi-icons: (
   "ab-testing": F001C,
@@ -31,6 +31,8 @@ $mdi-icons: (
   "account-box-outline": F007,
   "account-card-details": F5D2,
   "account-card-details-outline": FD87,
+  "account-cash": F00C2,
+  "account-cash-outline": F00C3,
   "account-check": F008,
   "account-check-outline": FBBE,
   "account-child": FA88,
@@ -86,6 +88,7 @@ $mdi-icons: (
   "air-conditioner": F01B,
   "air-filter": FD1F,
   "air-horn": FD88,
+  "air-humidifier": F00C4,
   "air-purifier": FD20,
   "airbag": FBC5,
   "airballoon": F01C,
@@ -281,8 +284,10 @@ $mdi-icons: (
   "animation-outline": FA8E,
   "animation-play": F939,
   "animation-play-outline": FA8F,
+  "ansible": F00C5,
   "anvil": F89A,
   "apache-kafka": F0031,
+  "api": F00C6,
   "apple": F035,
   "apple-finder": F036,
   "apple-icloud": F038,
@@ -302,6 +307,8 @@ $mdi-icons: (
   "apps-box": FD22,
   "arch": F8C6,
   "archive": F03C,
+  "arm-flex": F008F,
+  "arm-flex-outline": F0090,
   "arrange-bring-forward": F03D,
   "arrange-bring-to-front": F03E,
   "arrange-send-backward": F03F,
@@ -446,6 +453,7 @@ $mdi-icons: (
   "axis-z-rotate-clockwise": FD33,
   "axis-z-rotate-counterclockwise": FD34,
   "azure": F804,
+  "azure-devops": F0091,
   "babel": FA24,
   "baby": F06C,
   "baby-bottle": FF56,
@@ -562,7 +570,15 @@ $mdi-icons: (
   "beaker": FCC6,
   "beaker-outline": F68F,
   "beats": F097,
+  "bed-double": F0092,
+  "bed-double-outline": F0093,
   "bed-empty": F89F,
+  "bed-king": F0094,
+  "bed-king-outline": F0095,
+  "bed-queen": F0096,
+  "bed-queen-outline": F0097,
+  "bed-single": F0098,
+  "bed-single-outline": F0099,
   "bee": FFC1,
   "bee-flower": FFC2,
   "beer": F098,
@@ -585,6 +601,7 @@ $mdi-icons: (
   "betamax": F9CA,
   "biathlon": FDF7,
   "bible": F0A2,
+  "bicycle": F00C7,
   "bike": F0A3,
   "billboard": F0032,
   "billiards": FB3D,
@@ -620,6 +637,7 @@ $mdi-icons: (
   "bomb-off": F6C4,
   "bone": F0B9,
   "book": F0BA,
+  "book-information-variant": F009A,
   "book-lock": F799,
   "book-lock-open": F79A,
   "book-minus": F5D9,
@@ -681,6 +699,9 @@ $mdi-icons: (
   "border-top": F0D1,
   "border-top-variant": F8A5,
   "border-vertical": F0D2,
+  "bottle-soda": F009B,
+  "bottle-soda-classic": F009C,
+  "bottle-soda-outline": F009D,
   "bottle-wine": F853,
   "bow-tie": F677,
   "bowl": F617,
@@ -762,6 +783,7 @@ $mdi-icons: (
   "calendar-account-outline": FEF5,
   "calendar-alert": FA30,
   "calendar-blank": F0EE,
+  "calendar-blank-multiple": F009E,
   "calendar-blank-outline": FB42,
   "calendar-check": F0EF,
   "calendar-check-outline": FC20,
@@ -856,6 +878,7 @@ $mdi-icons: (
   "car-defrost-front": FD3D,
   "car-defrost-rear": FD3E,
   "car-door": FB47,
+  "car-door-lock": F00C8,
   "car-electric": FB48,
   "car-esp": FC25,
   "car-estate": F7A7,
@@ -890,6 +913,8 @@ $mdi-icons: (
   "card-bulleted-settings": FB50,
   "card-bulleted-settings-outline": FB51,
   "card-outline": FB52,
+  "card-search": F009F,
+  "card-search-outline": F00A0,
   "card-text": FB53,
   "card-text-outline": FB54,
   "cards": F638,
@@ -918,7 +943,7 @@ $mdi-icons: (
   "cash-multiple": F116,
   "cash-refund": FA9B,
   "cash-register": FCD0,
-  "cash-usd": F117,
+  "cash-usd-outline": F117,
   "cassette": F9D3,
   "cast": F118,
   "cast-audio": F0040,
@@ -1151,6 +1176,7 @@ $mdi-icons: (
   "cloud-upload-outline": FB5A,
   "clover": F815,
   "coach-lamp": F0042,
+  "coat-rack": F00C9,
   "code-array": F168,
   "code-braces": F169,
   "code-brackets": F16A,
@@ -1167,13 +1193,14 @@ $mdi-icons: (
   "code-tags-check": F693,
   "codepen": F175,
   "coffee": F176,
+  "coffee-maker": F00CA,
   "coffee-off": FFCA,
   "coffee-off-outline": FFCB,
   "coffee-outline": F6C9,
   "coffee-to-go": F177,
   "coffin": FB5B,
   "cogs": F8D5,
-  "coin": F178,
+  "coin-outline": F178,
   "coins": F694,
   "collage": F640,
   "collapse-all": FAA5,
@@ -1221,6 +1248,7 @@ $mdi-icons: (
   "compass-off": FB5C,
   "compass-off-outline": FB5D,
   "compass-outline": F18C,
+  "concourse-ci": F00CB,
   "console": F18D,
   "console-line": F7B6,
   "console-network": F8A8,
@@ -1368,15 +1396,23 @@ $mdi-icons: (
   "debug-step-over": F1BD,
   "decagram": F76B,
   "decagram-outline": F76C,
+  "decimal": F00CC,
+  "decimal-comma": F00CD,
+  "decimal-comma-decrease": F00CE,
+  "decimal-comma-increase": F00CF,
   "decimal-decrease": F1BE,
   "decimal-increase": F1BF,
   "delete": F1C0,
+  "delete-alert": F00D0,
+  "delete-alert-outline": F00D1,
   "delete-circle": F682,
   "delete-circle-outline": FB64,
   "delete-empty": F6CB,
   "delete-empty-outline": FEBA,
   "delete-forever": F5E8,
   "delete-forever-outline": FB65,
+  "delete-off": F00D2,
+  "delete-off-outline": F00D3,
   "delete-outline": F9E6,
   "delete-restore": F818,
   "delete-sweep": F5E9,
@@ -1441,6 +1477,10 @@ $mdi-icons: (
   "dns-outline": FB68,
   "do-not-disturb": F697,
   "do-not-disturb-off": F698,
+  "dock-bottom": F00D4,
+  "dock-left": F00D5,
+  "dock-right": F00D6,
+  "dock-window": F00D7,
   "docker": F867,
   "doctor": FA41,
   "dog": FA42,
@@ -1450,10 +1490,13 @@ $mdi-icons: (
   "dolly": FEBB,
   "domain": F1D7,
   "domain-off": FD4B,
+  "domain-plus": F00D8,
+  "domain-remove": F00D9,
   "domino-mask": F0045,
   "donkey": F7C1,
   "door": F819,
   "door-closed": F81A,
+  "door-closed-lock": F00DA,
   "door-open": F81B,
   "doorbell-video": F868,
   "dot-net": FAAD,
@@ -1468,6 +1511,8 @@ $mdi-icons: (
   "download-multiple": F9E8,
   "download-network": F6F3,
   "download-network-outline": FC42,
+  "download-off": F00DB,
+  "download-off-outline": F00DC,
   "download-outline": FB6B,
   "drag": F1DB,
   "drag-horizontal": F1DC,
@@ -1616,7 +1661,10 @@ $mdi-icons: (
   "face-agent": FD4C,
   "face-outline": FB72,
   "face-profile": F644,
+  "face-profile-woman": F00A1,
   "face-recognition": FC57,
+  "face-woman": F00A2,
+  "face-woman-outline": F00A3,
   "facebook": F20C,
   "facebook-box": F20D,
   "facebook-messenger": F20E,
@@ -1725,6 +1773,10 @@ $mdi-icons: (
   "file-search-outline": FC59,
   "file-send": F22A,
   "file-send-outline": F005B,
+  "file-settings": F00A4,
+  "file-settings-outline": F00A5,
+  "file-settings-variant": F00A6,
+  "file-settings-variant-outline": F00A7,
   "file-star": F005C,
   "file-star-outline": F005D,
   "file-swap": FFD4,
@@ -1775,9 +1827,12 @@ $mdi-icons: (
   "flag": F23B,
   "flag-checkered": F23C,
   "flag-minus": FB75,
+  "flag-minus-outline": F00DD,
   "flag-outline": F23D,
   "flag-plus": FB76,
+  "flag-plus-outline": F00DE,
   "flag-remove": FB77,
+  "flag-remove-outline": F00DF,
   "flag-triangle": F23F,
   "flag-variant": F240,
   "flag-variant-outline": F23E,
@@ -1826,7 +1881,11 @@ $mdi-icons: (
   "folder-edit": F8DD,
   "folder-edit-outline": FDAA,
   "folder-google-drive": F24E,
+  "folder-home": F00E0,
+  "folder-home-outline": F00E1,
   "folder-image": F24F,
+  "folder-information": F00E2,
+  "folder-information-outline": F00E3,
   "folder-key": F8AB,
   "folder-key-network": F8AC,
   "folder-key-network-outline": FC5C,
@@ -1849,6 +1908,10 @@ $mdi-icons: (
   "folder-remove-outline": FB7A,
   "folder-search": F967,
   "folder-search-outline": F968,
+  "folder-settings": F00A8,
+  "folder-settings-outline": F00A9,
+  "folder-settings-variant": F00AA,
+  "folder-settings-variant-outline": F00AB,
   "folder-star": F69C,
   "folder-star-outline": FB7B,
   "folder-swap": FFD6,
@@ -1991,6 +2054,8 @@ $mdi-icons: (
   "fullscreen-exit": F294,
   "function": F295,
   "function-variant": F870,
+  "furigana-horizontal": F00AC,
+  "furigana-vertical": F00AD,
   "fuse": FC61,
   "fuse-blade": FC62,
   "gamepad": F296,
@@ -2080,6 +2145,7 @@ $mdi-icons: (
   "go-kart-track": FD56,
   "gog": FB7D,
   "golf": F822,
+  "golf-tee": F00AE,
   "gondola": F685,
   "goodreads": FD57,
   "google": F2AD,
@@ -2343,6 +2409,7 @@ $mdi-icons: (
   "islam": F978,
   "island": F0071,
   "itunes": F676,
+  "iv-bag": F00E4,
   "jabber": FDB1,
   "jeepney": F302,
   "jellyfish": FF1E,
@@ -2471,6 +2538,7 @@ $mdi-icons: (
   "link-box-outline": FCF7,
   "link-box-variant": FCF8,
   "link-box-variant-outline": FCF9,
+  "link-lock": F00E5,
   "link-off": F338,
   "link-plus": FC70,
   "link-variant": F339,
@@ -2506,6 +2574,7 @@ $mdi-icons: (
   "looks": F344,
   "loupe": F345,
   "lumx": F346,
+  "lungs": F00AF,
   "lyft": FB1D,
   "magnet": F347,
   "magnet-on": F348,
@@ -2570,6 +2639,7 @@ $mdi-icons: (
   "math-cos": FC72,
   "math-integral": FFE8,
   "math-integral-box": FFE9,
+  "math-log": F00B0,
   "math-norm": FFEA,
   "math-norm-box": FFEB,
   "math-sin": FC73,
@@ -2604,6 +2674,7 @@ $mdi-icons: (
   "message-lock": FFEC,
   "message-outline": F365,
   "message-plus": F653,
+  "message-plus-outline": F00E6,
   "message-processing": F366,
   "message-reply": F367,
   "message-reply-text": F368,
@@ -2668,6 +2739,7 @@ $mdi-icons: (
   "moon-waning-gibbous": FF83,
   "moon-waxing-crescent": FF84,
   "moon-waxing-gibbous": FF85,
+  "moped": F00B1,
   "more": F37B,
   "mother-nurse": FCFD,
   "motion-sensor": FD6D,
@@ -2739,6 +2811,7 @@ $mdi-icons: (
   "network-off": FC77,
   "network-off-outline": FC78,
   "network-outline": FC79,
+  "network-router": F00B2,
   "network-strength-1": F8F3,
   "network-strength-1-alert": F8F4,
   "network-strength-2": F8F5,
@@ -3005,6 +3078,7 @@ $mdi-icons: (
   "phone": F3F2,
   "phone-alert": FF37,
   "phone-bluetooth": F3F3,
+  "phone-cancel": F00E7,
   "phone-classic": F602,
   "phone-forward": F3F4,
   "phone-hangup": F3F5,
@@ -3267,6 +3341,16 @@ $mdi-icons: (
   "roller-skate": FD07,
   "rollerblade": FD08,
   "rollupjs": FB9C,
+  "roman-numeral-1": F00B3,
+  "roman-numeral-10": F00BC,
+  "roman-numeral-2": F00B4,
+  "roman-numeral-3": F00B5,
+  "roman-numeral-4": F00B6,
+  "roman-numeral-5": F00B7,
+  "roman-numeral-6": F00B8,
+  "roman-numeral-7": F00B9,
+  "roman-numeral-8": F00BA,
+  "roman-numeral-9": F00BB,
   "room-service": F88C,
   "room-service-outline": FD73,
   "rotate-3d": FEE4,
@@ -3517,6 +3601,10 @@ $mdi-icons: (
   "sleep-off": F4B3,
   "slope-downhill": FE5F,
   "slope-uphill": FE60,
+  "smart-card": F00E8,
+  "smart-card-outline": F00E9,
+  "smart-card-reader": F00EA,
+  "smart-card-reader-outline": F00EB,
   "smog": FA70,
   "smoke-detector": F392,
   "smoking": F4B4,
@@ -3532,6 +3620,7 @@ $mdi-icons: (
   "solar-panel": FD77,
   "solar-panel-large": FD78,
   "solar-power": FA71,
+  "soldering-iron": F00BD,
   "solid": F68C,
   "sort": F4BA,
   "sort-alphabetical": F4BB,
@@ -3623,11 +3712,13 @@ $mdi-icons: (
   "sticker": F5D0,
   "sticker-emoji": F784,
   "stocking": F4DA,
+  "stomach": F00BE,
   "stop": F4DB,
   "stop-circle": F666,
   "stop-circle-outline": F667,
   "store": F4DC,
   "store-24-hour": F4DD,
+  "storefront": F00EC,
   "stove": F4DE,
   "strava": FB25,
   "stretch-to-page": FF48,
@@ -3679,6 +3770,7 @@ $mdi-icons: (
   "table-column-remove": F4EE,
   "table-column-width": F4EF,
   "table-edit": F4F0,
+  "table-eye": F00BF,
   "table-large": F4F1,
   "table-large-plus": FFA4,
   "table-large-remove": FFA5,
@@ -3749,6 +3841,7 @@ $mdi-icons: (
   "text-subject": F9A9,
   "text-to-speech": F50A,
   "text-to-speech-off": F50B,
+  "textarea": F00C0,
   "textbox": F60E,
   "textbox-password": F7F4,
   "texture": F50C,
@@ -3759,7 +3852,9 @@ $mdi-icons: (
   "thermometer-alert": FE61,
   "thermometer-chevron-down": FE62,
   "thermometer-chevron-up": FE63,
+  "thermometer-high": F00ED,
   "thermometer-lines": F510,
+  "thermometer-low": F00EE,
   "thermometer-minus": FE64,
   "thermometer-plus": FE65,
   "thermostat": F393,
@@ -3875,6 +3970,7 @@ $mdi-icons: (
   "truck-delivery": F53E,
   "truck-fast": F787,
   "truck-trailer": F726,
+  "trumpet": F00C1,
   "tshirt-crew": FA7A,
   "tshirt-crew-outline": F53F,
   "tshirt-v": FA7B,
@@ -3898,6 +3994,8 @@ $mdi-icons: (
   "uber": F748,
   "ubisoft": FBB6,
   "ubuntu": F548,
+  "ufo": F00EF,
+  "ufo-outline": F00F0,
   "ultra-high-definition": F7F8,
   "umbraco": F549,
   "umbrella": F54A,
@@ -3919,6 +4017,8 @@ $mdi-icons: (
   "upload-multiple": F83C,
   "upload-network": F6F5,
   "upload-network-outline": FCB4,
+  "upload-off": F00F1,
+  "upload-off-outline": F00F2,
   "upload-outline": FE67,
   "usb": F553,
   "valve": F0088,
