--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "normal";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "4.2.95" !default;
+$mdi-version:          "4.3.95" !default;
 
 $mdi-icons: (
   "ab-testing": F001C,
@@ -37,6 +37,7 @@ $mdi-icons: (
   "account-check-outline": FBBE,
   "account-child": FA88,
   "account-child-circle": FA89,
+  "account-child-outline": F00F3,
   "account-circle": F009,
   "account-circle-outline": FB31,
   "account-clock": FB32,
@@ -74,12 +75,14 @@ $mdi-icons: (
   "account-search": F016,
   "account-search-outline": F934,
   "account-settings": F630,
+  "account-settings-outline": F00F4,
   "account-star": F017,
   "account-star-outline": FBC4,
   "account-supervisor": FA8A,
   "account-supervisor-circle": FA8B,
   "account-switch": F019,
   "account-tie": FCBF,
+  "account-tie-outline": F00F5,
   "accusoft": F849,
   "adchoices": FD1E,
   "adjust": F01A,
@@ -124,6 +127,7 @@ $mdi-icons: (
   "alert-octagram-outline": FCC3,
   "alert-outline": F02A,
   "alien": F899,
+  "alien-outline": F00F6,
   "all-inclusive": F6BD,
   "alpha": F02B,
   "alpha-a": 0041,
@@ -285,6 +289,7 @@ $mdi-icons: (
   "animation-play": F939,
   "animation-play-outline": FA8F,
   "ansible": F00C5,
+  "antenna": F0144,
   "anvil": F89A,
   "apache-kafka": F0031,
   "api": F00C6,
@@ -532,6 +537,8 @@ $mdi-icons: (
   "battery-90-bluetooth": F945,
   "battery-alert": F083,
   "battery-alert-bluetooth": F946,
+  "battery-alert-variant": F00F7,
+  "battery-alert-variant-outline": F00F8,
   "battery-bluetooth": F947,
   "battery-bluetooth-variant": F948,
   "battery-charging": F084,
@@ -581,6 +588,7 @@ $mdi-icons: (
   "bed-single-outline": F0099,
   "bee": FFC1,
   "bee-flower": FFC2,
+  "beehive-outline": F00F9,
   "beer": F098,
   "behance": F099,
   "bell": F09A,
@@ -603,6 +611,7 @@ $mdi-icons: (
   "bible": F0A2,
   "bicycle": F00C7,
   "bike": F0A3,
+  "bike-fast": F014A,
   "billboard": F0032,
   "billiards": FB3D,
   "billiards-rack": FB3E,
@@ -680,6 +689,7 @@ $mdi-icons: (
   "boom-gate-up": FEA9,
   "boom-gate-up-outline": FEAA,
   "boombox": F5DC,
+  "boomerang": F00FA,
   "bootstrap": F6C5,
   "border-all": F0C7,
   "border-all-variant": F8A0,
@@ -719,6 +729,8 @@ $mdi-icons: (
   "briefcase-account": FCCC,
   "briefcase-account-outline": FCCD,
   "briefcase-check": F0D7,
+  "briefcase-clock": F00FB,
+  "briefcase-clock-outline": F00FC,
   "briefcase-download": F0D8,
   "briefcase-download-outline": FC19,
   "briefcase-edit": FA97,
@@ -967,6 +979,7 @@ $mdi-icons: (
   "cellphone-link-off": F122,
   "cellphone-lock": F94E,
   "cellphone-message": F8D2,
+  "cellphone-message-off": F00FD,
   "cellphone-nfc": FEAD,
   "cellphone-off": F94F,
   "cellphone-play": F0041,
@@ -977,6 +990,7 @@ $mdi-icons: (
   "cellphone-text": F8D1,
   "cellphone-wireless": F814,
   "celtic-cross": FCD1,
+  "centos": F0145,
   "certificate": F124,
   "chair-rolling": FFBA,
   "chair-school": F125,
@@ -1088,6 +1102,7 @@ $mdi-icons: (
   "circle-edit-outline": F8D4,
   "circle-expand": FEB3,
   "circle-medium": F9DD,
+  "circle-off-outline": F00FE,
   "circle-outline": F765,
   "circle-slice-1": FA9D,
   "circle-slice-2": FA9E,
@@ -1119,6 +1134,9 @@ $mdi-icons: (
   "clipboard-check": F14C,
   "clipboard-check-outline": F8A7,
   "clipboard-flow": F6C7,
+  "clipboard-flow-outline": F0142,
+  "clipboard-list": F00FF,
+  "clipboard-list-outline": F0100,
   "clipboard-outline": F14D,
   "clipboard-play": FC35,
   "clipboard-play-outline": FC36,
@@ -1179,6 +1197,7 @@ $mdi-icons: (
   "coat-rack": F00C9,
   "code-array": F168,
   "code-braces": F169,
+  "code-braces-box": F0101,
   "code-brackets": F16A,
   "code-equal": F16B,
   "code-greater-than": F16C,
@@ -1188,6 +1207,7 @@ $mdi-icons: (
   "code-not-equal": F170,
   "code-not-equal-variant": F171,
   "code-parentheses": F172,
+  "code-parentheses-box": F0102,
   "code-string": F173,
   "code-tags": F174,
   "code-tags-check": F693,
@@ -1253,6 +1273,7 @@ $mdi-icons: (
   "console-line": F7B6,
   "console-network": F8A8,
   "console-network-outline": FC3C,
+  "consolidate": F0103,
   "contact-mail": F18E,
   "contact-mail-outline": FEB5,
   "contact-phone": FEB6,
@@ -1371,6 +1392,8 @@ $mdi-icons: (
   "cursor-default": F1B4,
   "cursor-default-click": FCD9,
   "cursor-default-click-outline": FCDA,
+  "cursor-default-gesture": F0152,
+  "cursor-default-gesture-outline": F0153,
   "cursor-default-outline": F1B5,
   "cursor-move": F1B6,
   "cursor-pointer": F1B7,
@@ -1431,6 +1454,7 @@ $mdi-icons: (
   "developer-board": F696,
   "deviantart": F1C7,
   "devices": FFD0,
+  "diabetes": F0151,
   "dialpad": F61C,
   "diameter": FC3F,
   "diameter-outline": FC40,
@@ -1545,6 +1569,7 @@ $mdi-icons: (
   "eject": F1EA,
   "eject-outline": FB6D,
   "electric-switch": FEBC,
+  "electric-switch-closed": F0104,
   "electron-framework": F0046,
   "elephant": F7C5,
   "elevation-decline": F1EB,
@@ -1573,14 +1598,20 @@ $mdi-icons: (
   "email-outline": F1F0,
   "email-plus": F9EA,
   "email-plus-outline": F9EB,
+  "email-receive": F0105,
+  "email-receive-outline": F0106,
   "email-search": F960,
   "email-search-outline": F961,
+  "email-send": F0107,
+  "email-send-outline": F0108,
   "email-variant": F5F0,
   "ember": FB15,
   "emby": F6B3,
   "emoticon": FC44,
   "emoticon-angry": FC45,
   "emoticon-angry-outline": FC46,
+  "emoticon-confused": F0109,
+  "emoticon-confused-outline": F010A,
   "emoticon-cool": FC47,
   "emoticon-cool-outline": F1F3,
   "emoticon-cry": FC48,
@@ -1612,6 +1643,7 @@ $mdi-icons: (
   "engine-off": FA45,
   "engine-off-outline": FA46,
   "engine-outline": F1FB,
+  "epsilon": F010B,
   "equal": F1FC,
   "equal-box": F1FD,
   "equalizer": FEBF,
@@ -1782,6 +1814,10 @@ $mdi-icons: (
   "file-swap": FFD4,
   "file-swap-outline": FFD5,
   "file-table": FC5A,
+  "file-table-box": F010C,
+  "file-table-box-multiple": F010D,
+  "file-table-box-multiple-outline": F010E,
+  "file-table-box-outline": F010F,
   "file-table-outline": FC5B,
   "file-tree": F645,
   "file-undo": F8DB,
@@ -1798,6 +1834,8 @@ $mdi-icons: (
   "filmstrip": F230,
   "filmstrip-off": F231,
   "filter": F232,
+  "filter-menu": F0110,
+  "filter-menu-outline": F0111,
   "filter-minus": FF0B,
   "filter-minus-outline": FF0C,
   "filter-outline": F233,
@@ -1806,6 +1844,8 @@ $mdi-icons: (
   "filter-remove": F234,
   "filter-remove-outline": F235,
   "filter-variant": F236,
+  "filter-variant-minus": F013D,
+  "filter-variant-plus": F013E,
   "filter-variant-remove": F0061,
   "finance": F81E,
   "find-replace": F6D3,
@@ -1853,8 +1893,10 @@ $mdi-icons: (
   "flask-outline": F096,
   "flattr": F246,
   "flickr": FCE3,
+  "flip-horizontal": F0112,
   "flip-to-back": F247,
   "flip-to-front": F248,
+  "flip-vertical": F0113,
   "floor-lamp": F8DC,
   "floor-lamp-dual": F0062,
   "floor-lamp-variant": F0063,
@@ -1878,9 +1920,12 @@ $mdi-icons: (
   "folder-clock": FAB9,
   "folder-clock-outline": FABA,
   "folder-download": F24D,
+  "folder-download-outline": F0114,
   "folder-edit": F8DD,
   "folder-edit-outline": FDAA,
   "folder-google-drive": F24E,
+  "folder-heart": F0115,
+  "folder-heart-outline": F0116,
   "folder-home": F00E0,
   "folder-home-outline": F00E1,
   "folder-image": F24F,
@@ -1889,6 +1934,7 @@ $mdi-icons: (
   "folder-key": F8AB,
   "folder-key-network": F8AC,
   "folder-key-network-outline": FC5C,
+  "folder-key-outline": F0117,
   "folder-lock": F250,
   "folder-lock-open": F251,
   "folder-move": F252,
@@ -1921,6 +1967,7 @@ $mdi-icons: (
   "folder-text": FC5E,
   "folder-text-outline": FC5F,
   "folder-upload": F259,
+  "folder-upload-outline": F0118,
   "folder-zip": F6EA,
   "folder-zip-outline": F7B8,
   "font-awesome": F03A,
@@ -2079,6 +2126,7 @@ $mdi-icons: (
   "gamepad-up": FE83,
   "gamepad-variant": F297,
   "gamepad-variant-outline": FED4,
+  "gamma": F0119,
   "gantry-crane": FDAD,
   "garage": F6D8,
   "garage-alert": F871,
@@ -2133,6 +2181,7 @@ $mdi-icons: (
   "glass-cocktail": F356,
   "glass-flute": F2A5,
   "glass-mug": F2A6,
+  "glass-mug-variant": F0141,
   "glass-stange": F2A7,
   "glass-tulip": F2A8,
   "glass-wine": F875,
@@ -2203,10 +2252,13 @@ $mdi-icons: (
   "guy-fawkes-mask": F824,
   "hackernews": F624,
   "hail": FAC0,
+  "hair-dryer": F011A,
+  "hair-dryer-outline": F011B,
   "halloween": FB7F,
   "hamburger": F684,
   "hammer": F8E9,
   "hand": FA4E,
+  "hand-heart": F011C,
   "hand-left": FE87,
   "hand-okay": FA4F,
   "hand-peace": FA50,
@@ -2262,6 +2314,7 @@ $mdi-icons: (
   "help-rhombus-outline": FB82,
   "hexagon": F2D8,
   "hexagon-multiple": F6E0,
+  "hexagon-multiple-outline": F011D,
   "hexagon-outline": F2D9,
   "hexagon-slice-1": FAC2,
   "hexagon-slice-2": FAC3,
@@ -2312,6 +2365,7 @@ $mdi-icons: (
   "home-modern": F2DD,
   "home-outline": F6A0,
   "home-plus": F974,
+  "home-roof": F0156,
   "home-thermometer": FF71,
   "home-thermometer-outline": FF72,
   "home-variant": F2DE,
@@ -2319,6 +2373,8 @@ $mdi-icons: (
   "hook": F6E1,
   "hook-off": F6E2,
   "hops": F2DF,
+  "horizontal-rotate-clockwise": F011E,
+  "horizontal-rotate-counterclockwise": F011F,
   "horseshoe": FA57,
   "hospital": F0017,
   "hospital-box": F2E0,
@@ -2354,7 +2410,15 @@ $mdi-icons: (
   "id-card": FFE0,
   "identifier": FF1B,
   "iframe": FC67,
+  "iframe-array": F0120,
+  "iframe-array-outline": F0121,
+  "iframe-braces": F0122,
+  "iframe-braces-outline": F0123,
   "iframe-outline": FC68,
+  "iframe-parentheses": F0124,
+  "iframe-parentheses-outline": F0125,
+  "iframe-variable": F0126,
+  "iframe-variable-outline": F0127,
   "image": F2E9,
   "image-album": F2EA,
   "image-area": F2EB,
@@ -2445,10 +2509,12 @@ $mdi-icons: (
   "keyboard-space": F0072,
   "keyboard-tab": F312,
   "keyboard-variant": F313,
+  "khanda": F0128,
   "kickstarter": F744,
   "knife": F9FA,
   "knife-military": F9FB,
   "kodi": F314,
+  "kubernetes": F0129,
   "label": F315,
   "label-off": FACA,
   "label-off-outline": FACB,
@@ -2542,7 +2608,10 @@ $mdi-icons: (
   "link-off": F338,
   "link-plus": FC70,
   "link-variant": F339,
+  "link-variant-minus": F012A,
   "link-variant-off": F33A,
+  "link-variant-plus": F012B,
+  "link-variant-remove": F012C,
   "linkedin": F33B,
   "linkedin-box": F33C,
   "linux": F33D,
@@ -2608,6 +2677,7 @@ $mdi-icons: (
   "map-marker-check": FC71,
   "map-marker-circle": F34F,
   "map-marker-distance": F8EF,
+  "map-marker-down": F012D,
   "map-marker-minus": F650,
   "map-marker-multiple": F350,
   "map-marker-off": F351,
@@ -2619,6 +2689,7 @@ $mdi-icons: (
   "map-marker-radius": F352,
   "map-marker-remove": FF26,
   "map-marker-remove-variant": FF27,
+  "map-marker-up": F012E,
   "map-minus": F980,
   "map-outline": F981,
   "map-plus": F982,
@@ -2723,6 +2794,7 @@ $mdi-icons: (
   "monitor": F379,
   "monitor-cellphone": F988,
   "monitor-cellphone-star": F989,
+  "monitor-clean": F012F,
   "monitor-dashboard": FA06,
   "monitor-lock": FDB7,
   "monitor-multiple": F37A,
@@ -2752,6 +2824,10 @@ $mdi-icons: (
   "move-resize": F655,
   "move-resize-variant": F656,
   "movie": F381,
+  "movie-edit": F014D,
+  "movie-edit-outline": F014E,
+  "movie-filter": F014F,
+  "movie-filter-outline": F0150,
   "movie-open": FFEE,
   "movie-open-outline": FFEF,
   "movie-outline": FDB9,
@@ -2839,6 +2915,7 @@ $mdi-icons: (
   "nfc-variant-off": FE37,
   "ninja": F773,
   "nintendo-switch": F7E0,
+  "nix": F0130,
   "nodejs": F399,
   "not-equal": F98C,
   "not-equal-variant": F98D,
@@ -2946,6 +3023,7 @@ $mdi-icons: (
   "numeric-negative-1": F0074,
   "nut": F6F7,
   "nutrition": F3C2,
+  "nuxt": F0131,
   "oar": F67B,
   "ocarina": FDBC,
   "octagon": F3C3,
@@ -3198,7 +3276,10 @@ $mdi-icons: (
   "power-sleep": F903,
   "power-socket": F427,
   "power-socket-au": F904,
+  "power-socket-de": F0132,
   "power-socket-eu": F7E6,
+  "power-socket-fr": F0133,
+  "power-socket-jp": F0134,
   "power-socket-uk": F7E7,
   "power-socket-us": F7E8,
   "power-standby": F905,
@@ -3221,6 +3302,7 @@ $mdi-icons: (
   "progress-alert": FC98,
   "progress-check": F994,
   "progress-clock": F995,
+  "progress-close": F0135,
   "progress-download": F996,
   "progress-upload": F997,
   "progress-wrench": FC99,
@@ -3283,6 +3365,7 @@ $mdi-icons: (
   "rectangle-outline": FE42,
   "recycle": F44C,
   "reddit": F44D,
+  "redhat": F0146,
   "redo": F44E,
   "redo-variant": F44F,
   "reflect-horizontal": FA0D,
@@ -3292,6 +3375,7 @@ $mdi-icons: (
   "registered-trademark": FA66,
   "relative-scale": F452,
   "reload": F453,
+  "reload-alert": F0136,
   "reminder": F88B,
   "remote": F454,
   "remote-desktop": F8B8,
@@ -3316,8 +3400,10 @@ $mdi-icons: (
   "resize-bottom-right": F45D,
   "responsive": F45E,
   "restart": F708,
+  "restart-alert": F0137,
   "restart-off": FD71,
   "restore": F99A,
+  "restore-alert": F0138,
   "rewind": F45F,
   "rewind-10": FD06,
   "rewind-30": FD72,
@@ -3474,6 +3560,8 @@ $mdi-icons: (
   "settings-outline": F8BA,
   "settings-transfer": F007D,
   "settings-transfer-outline": F007E,
+  "shaker": F0139,
+  "shaker-outline": F013A,
   "shape": F830,
   "shape-circle-plus": F65D,
   "shape-outline": F831,
@@ -3541,6 +3629,7 @@ $mdi-icons: (
   "sign-direction-minus": F0022,
   "sign-direction-plus": FFFD,
   "sign-direction-remove": FFFE,
+  "sign-real-estate": F0143,
   "sign-text": F781,
   "signal": F4A2,
   "signal-2g": F711,
@@ -3601,6 +3690,8 @@ $mdi-icons: (
   "sleep-off": F4B3,
   "slope-downhill": FE5F,
   "slope-uphill": FE60,
+  "slot-machine": F013F,
+  "slot-machine-outline": F0140,
   "smart-card": F00E8,
   "smart-card-outline": F00E9,
   "smart-card-reader": F00EA,
@@ -3819,6 +3910,7 @@ $mdi-icons: (
   "television-box": F838,
   "television-classic": F7F3,
   "television-classic-off": F839,
+  "television-clean": F013B,
   "television-guide": F503,
   "television-off": F83A,
   "television-pause": FFA6,
@@ -3914,6 +4006,8 @@ $mdi-icons: (
   "tooltip-text-outline": FBB3,
   "tooth": F8C2,
   "tooth-outline": F529,
+  "toothbrush": F0154,
+  "toothbrush-paste": F0155,
   "tor": F52A,
   "tortoise": FD17,
   "tournament": F9AD,
@@ -4028,6 +4122,7 @@ $mdi-icons: (
   "van-utility": F7FA,
   "vanish": F7FB,
   "variable": FAE6,
+  "variable-box": F013C,
   "vector-arrange-above": F554,
   "vector-arrange-below": F555,
   "vector-bezier": FAE7,
@@ -4121,7 +4216,9 @@ $mdi-icons: (
   "volume-mute": F75E,
   "volume-off": F581,
   "volume-plus": F75C,
+  "volume-source": F014B,
   "volume-variant-off": FE68,
+  "volume-vibrate": F014C,
   "vote": FA1E,
   "vote-outline": FA1F,
   "vpn": F582,
@@ -4243,6 +4340,9 @@ $mdi-icons: (
   "window-minimize": F5B0,
   "window-open": F5B1,
   "window-restore": F5B2,
+  "window-shutter": F0147,
+  "window-shutter-alert": F0148,
+  "window-shutter-open": F0149,
   "windows": F5B3,
   "windows-classic": FA20,
   "wiper": FAE8,
